# fastapi-base

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_08_12_2327-fccf382feff7_init.py  2025_08_14_0112-f56beb965b19_adds_relationship_one_to_many_user_tasks.py
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: auth.py  health.py  tasks.py  users.py
app/api/v1/schemas/: __init__.py  task.py  user.py
app/core/: config.py  security.py
app/database/: db.py  unitofwork.py
app/database/models/: __init__.py  base.py  task.py  user.py
app/database/repositories/: __init__.py  base.py  task.py  user.py
app/schemas/: __init__.py  error.py  task.py  token.py  user.py
app/services/: __init__.py  auth.py  base.py  task.py  user.py
